@@ -54,4 +54,4 @@ Icon=gnome-panel.png
 Terminal=0
 Type=Application
 DocPath=panel/globalpanelprefs.html
-Categories=Application;Settings;
+Categories=Application;Settings;AdvancedSettings;
