@@ -1,3 +1,10 @@
+2002-01-28  Seth Nickell  <snickell@stanford.edu>
+
+	* Makefile.am:
+	* gnome-panel-properties.desktop:
+
+	Install into the new CC capplets location.
+
 2002-01-28  Anders Carlsson  <andersca@gnu.org>
 
 	* gnome-run.c (add_columns): Use a single tree view column
